@@ -45,6 +45,7 @@ The sound effects include:
   o Band-reject filter
   o Chorus effect
   o Cut out loop samples
+  o Move sound stage of CD audio to in front of you (for headphone use)
   o Add an echo 
   o Add a sequence of echos
   o Fade in and out
